--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -7,9 +7,8 @@ description: >
 
 # This information will be displayed in the orb registry and is not mandatory.
 display:
-  home_url: "https://www.example.com/docs"
+  home_url: "https://github.com/jsustr/sample-orb"
   source_url: "https://github.com/jsustr/sample-orb"
-
 # If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
 # orbs:
 #  hello: circleci/hello-build@0.0.5
